--- a/docs/templates/control.njk
+++ b/docs/templates/control.njk
@@ -6,7 +6,10 @@
 <h1 id="">Control</h1>
 
 <span code>control()</span> waits for all incoming connections to emit.
-<img src="/docs/assets/animations/control.svg" class="animation"/>
+<div class="animation-group">
+  <img src="/docs/assets/animations/control.svg" class="animation light"/>
+  <img src="/docs/assets/animations/control-dark.svg" class="animation dark"/>
+</div>
 
 The main usage of <span code>control()</span> is as an <i>AND</i> gate between multiple sources:
 
