--- a/docs/templates/filter.njk
+++ b/docs/templates/filter.njk
@@ -6,7 +6,10 @@
 <h1 id="">Filter</h1>
 
 Filter blocks some emissions while letting some others true utilizng the provided function.
-<img src="/docs/assets/animations/filter.svg" class="animation"/>
+<div class="animation-group">
+  <img src="/docs/assets/animations/filter.svg" class="animation light"/>
+  <img src="/docs/assets/animations/filter-dark.svg" class="animation dark"/>
+</div>
 
 Similar to <a href="/docs/map"><span code>map()</span></a>, this function can be a simple sync function, in which case
 it needs to take one argument:
