--- a/docs/templates/pack.njk
+++ b/docs/templates/pack.njk
@@ -6,7 +6,10 @@
 <h1 id="">Pack</h1>
 
 <span code>pack()</span> emits with the latest value of all sources, packed together.
-<img src="/docs/assets/animations/pack.svg" class="animation"/>
+<div class="animation-group">
+  <img src="/docs/assets/animations/pack.svg" class="animation light"/>
+  <img src="/docs/assets/animations/pack-dark.svg" class="animation dark"/>
+</div>
 
 You can use <span code>pack()</span> to collect values from multiple sources:
 
