--- a/docs/templates/map.njk
+++ b/docs/templates/map.njk
@@ -6,7 +6,10 @@
 <h1 id="">Map</h1>
 
 <span code>map()</span> transforms incoming data using the provided function.
-<img src="/docs/assets/animations/map.svg" class="animation"/>
+<div class="animation-group">
+  <img src="/docs/assets/animations/map.svg" class="animation light"/>
+  <img src="/docs/assets/animations/map-dark.svg" class="animation dark"/>
+</div>
 
 The function can be a simple synchronous function, in which case it should take only one argument:
 
