--- a/docs/templates/pin.njk
+++ b/docs/templates/pin.njk
@@ -6,7 +6,10 @@
 <h1 id="">Pin</h1>
 
 <span code>pin()</span> is a relay for incoming events/data.
-<img src="/docs/assets/animations/pin.svg" class="animation"/>
+<div class="animation-group">
+  <img src="/docs/assets/animations/pin.svg" class="animation light"/>
+  <img src="/docs/assets/animations/pin-dark.svg" class="animation dark"/>
+</div>
 
 <i>Pin</i> is the parent class of most of more elaborate types of pins in <b>CONNECTIVE</b>, representing
 any node in a <a href="/docs/overview#reactive-flow">reactive flow</a>. Different pin types
