--- a/docs/templates/state.njk
+++ b/docs/templates/state.njk
@@ -117,7 +117,7 @@ a.send([1, 2, 3, 4]);</code>
 
 Each <span code>state()</span> has an input pin named <span code>"value"</span> and an output pin
 named <span code>"value"</span>, which are also accessible via shortcut properties <span code>.input</span>
-and <span code>.output</span> respectively:
+and <span code>.output</span> respectively.
 
 <pre><code class="javascript">let s = state();
 
