--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -77,12 +77,42 @@ a.no-underline::after {
 }
 
 pre + .buttons {
+  margin-top: -16px;
   margin-bottom: 24px;
 }
 
 .buttons a:not(.button) {
   margin: 0 32px;
 }
+
+.copy-btn {
+  padding: 0;
+  width: 38px;
+  height: 38px;
+  position: relative;
+  border: 2px solid #4A90E2;
+  background: #4A90E2;
+  vertical-align: top;
+  border-radius: 3px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background .15s;
+  margin-right: 8px;
+}
+
+.copy-btn:hover { background: transparent; }
+
+.copy-btn img {
+  position: absolute;
+  width: 24px;
+  transition: opacity .15s;
+}
+
+.copy-btn img:last-child { opacity: 0; }
+.copy-btn:hover img:last-child { opacity: 1; }
+.copy-btn:hover img:first-child { opacity: 0; }
 
 .logo {
   max-width: 380px;
